--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,9 @@
 @import 'partials/variables';
 @import 'partials/common';
 @import 'partials/header';
+@import 'partials/main';
+@import 'partials/footer';
+
 
 body {
     font-family: 'Lato', sans-serif;
