--- a/resources/sass/partials/_variables.scss
+++ b/resources/sass/partials/_variables.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 $electric-blue: #0282F9;
+$bg-main: #1C1C1C;
 $txt-white: #fff;
 $txt-black: #434343;
 $max-w: 1170px
